added +1/-1 residue selection for pivotlist_final

--- a/DDG_Code.ipynb
+++ b/DDG_Code.ipynb
@@ -30,17 +30,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 94,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "187E,186E,219E,218E,217E,64I,189E,188E,190E,156E,154E,155E,220E,221E,59I,63I,62I,222E,60I,61I,58I\n",
+      "187E,186E,219E,218E,217E,64I,189E,188E,190E,156E,154E,155E,220E,221E,59I,63I,62I,222E,60I,61I,58I\n",
+      "/home/james.lucas/Rotation/DDGBenchmarks_Test\n"
+     ]
+    }
+   ],
    "source": [
     "#Modified SubmitRun_DDG_Zemu_General.py for local troubleshooting of DDG_Test.xml\n",
     "#3/26/16\n",
     "\n",
-    "from Bio.PDB import *\n",
-    "from datetime import *\n",
     "import os\n",
     "import subprocess\n",
     "import time\n",
@@ -51,9 +60,13 @@
     "import tempfile\n",
     "import re\n",
     "import json\n",
+    "from Bio.PDB import *\n",
+    "from datetime import *\n",
     "\n",
-    "os.chdir('/Users/jameslucas/Kortemme_Rotation/')\n",
+    "#os.chdir('/Users/jameslucas/Kortemme_Rotation/')\n",
+    "os.chdir('/home/james.lucas/Rotation/DDGBenchmarks_Test')\n",
     "\n",
+    "#From Kyle's Finalize.py\n",
     "def read_mutations_resfile(filenum_dir):\n",
     "    resfile = os.path.join(filenum_dir, 'mutations_repack.resfile')\n",
     "    mutations = []\n",
@@ -68,6 +81,7 @@
     "                post_start = True\n",
     "    return mutations\n",
     "\n",
+    "#From Kyle's Finalize.py\n",
     "def find_neighbors(filenum_dir, pdb_path, neighbor_distance = 8.0):\n",
     "    mutations = read_mutations_resfile(filenum_dir)\n",
     "    open_filename = pdb_path\n",
@@ -112,17 +126,45 @@
     "    key = sorted(jsonfile.keys())[0] #SGE_TASK_ID\n",
     "    chaintomove = jsonfile[key][\"%%chainstomove%%\"]\n",
     "    inputdir = jsonfile[key]['input_file_list'][0]\n",
-    "    print key\n",
     "    return chaintomove, inputdir\n",
     "\n",
     "#Finds neighbors within 8A and adds position and Chain information to a list\n",
     "def neighbors_list(pdb_filepath, pdb_file):\n",
     "    neighbors = find_neighbors(pdb_filepath, pdb_file, 8)\n",
-    "    pivotlist = ''\n",
+    "    #Generating pivotlist with sets\n",
+    "    pivotlist = set()\n",
     "    for i in neighbors:\n",
-    "        pivotlist = pivotlist + str(i[0][1]) + str(i[1]) + ','\n",
-    "    pivotlist = pivotlist[:-1]\n",
-    "    return pivotlist\n",
+    "        pivotlist.add(str(i[0][1]) + str(i[1]))\n",
+    "        pivotlist.add(str(i[0][1] + 1) + str(i[1]))\n",
+    "        pivotlist.add(str(i[0][1] - 1) + str(i[1]))\n",
+    "    parser = PDBParser()\n",
+    "    \n",
+    "    #Adds +1/-1 residues for items in pivotlist\n",
+    "    #Dirty AF but it works\n",
+    "    \n",
+    "    structure = parser.get_structure('TEST', 'data/59648/1TM1_EI.pdb')\n",
+    "    chain_list = Selection.unfold_entities(structure, 'C')\n",
+    "    res_list = Selection.unfold_entities(chain_list, 'R')\n",
+    "    \n",
+    "    all_residues = set()\n",
+    "    \n",
+    "    for chain in chain_list:\n",
+    "        for residue in [res.get_id() for res in res_list]:\n",
+    "            if residue[2] != ' ':\n",
+    "                all_residues.add(str(residue[1]) + str(residue[2]) + str(chain))\n",
+    "            else:\n",
+    "                all_residues.add(str(residue[1]) + str(chain.get_id()))\n",
+    "    \n",
+    "    pivotlist_alpha = set()\n",
+    "    pivotlist_alpha = pivotlist.intersection(all_residues)\n",
+    "    \n",
+    "    pivotlist_final = ''\n",
+    "    for i in pivotlist_alpha:\n",
+    "        pivotlist_final = pivotlist_final + '%s,' %i\n",
+    "    \n",
+    "    pivotlist_final = pivotlist_final[:-1]\n",
+    "\n",
+    "    return pivotlist_final\n",
     "\n",
     "#Reads resfile and returns mutation position+chain and type\n",
     "def resfile_stuff(pdb_filepath):\n",
@@ -141,13 +183,14 @@
     "    PDBID = pdbtemp[:-4]\n",
     "    predIDoutdir = outputdir + filenum\n",
     "    \n",
-    "    #Makes a folder for data dumping\n",
-    "    print 'Making directory %s%s...' %(outputdir, filenum)\n",
-    "    os.makedirs(predIDoutdir)\n",
+    "#    #Makes a folder for data dumping\n",
+    "#    print 'Making directory %s%s...' %(outputdir, filenum)\n",
+    "#    os.makedirs(predIDoutdir)\n",
     "  \n",
     "    #Assigns function output to variables for bash input (pivot_residues, target, resfile_relpath)\n",
     "    target = resfile_stuff(filenum_dir)\n",
     "    pivot_residues = neighbors_list(filenum_dir, inputdir)\n",
+    "    print pivot_residues\n",
     "    resfile_relpath = os.path.relpath(filenum_dir, predIDoutdir)\n",
     "    pdb_relpath = os.path.relpath(inputdir, predIDoutdir)\n",
     "    \n",
@@ -171,15 +214,15 @@
     "           '-nstruct 5'\n",
     "          ]\n",
     "    \n",
-    "    print 'Working on: %s %s' %(filenum, PDBID)\n",
+    "#    print 'Working on: %s %s' %(filenum, PDBID)\n",
     "    \n",
-    "    outfile_path = os.path.join(predIDoutdir, 'rosetta.out')\n",
-    "    rosetta_outfile = open(outfile_path, 'w')\n",
-    "    print 'Running RosettaScript...'\n",
-    "    rosetta_process = subprocess.Popen(arg, stdout=rosetta_outfile, cwd=predIDoutdir)\n",
-    "    return_code = rosetta_process.wait()\n",
-    "    print 'Task return code:', return_code, '\\n'\n",
-    "    rosetta_outfile.close()    \n",
+    "#    outfile_path = os.path.join(predIDoutdir, 'rosetta.out')\n",
+    "#    rosetta_outfile = open(outfile_path, 'w')\n",
+    "#    print 'Running RosettaScript...'\n",
+    "#    rosetta_process = subprocess.Popen(arg, stdout=rosetta_outfile, cwd=predIDoutdir)\n",
+    "#    return_code = rosetta_process.wait()\n",
+    "#    print 'Task return code:', return_code, '\\n'\n",
+    "#    rosetta_outfile.close()    \n",
     "    \n",
     "    return filenum\n",
     "\n",
@@ -188,8 +231,8 @@
     "\n",
     "#ACTION!!!\n",
     "chaintomove, inputdir = json_parser()\n",
-    "#filenum = bash(chaintomove, inputdir, outputdir)\n",
-    "print 'FINISHED!!!'\n"
+    "filenum = bash(chaintomove, inputdir, outputdir)\n",
+    "#print 'FINISHED!!!'\n"
    ]
   },
   {
@@ -845,7 +888,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.10"
+   "version": "2.7.11"
   }
  },
  "nbformat": 4,
