Added ordered to do list

--- a/RotationNotebook.v1.ipynb
+++ b/RotationNotebook.v1.ipynb
@@ -75,7 +75,10 @@
     "                print pp.get_sequence()\n",
     "            seq = polypeptide.get_sequence()\n",
     "            search_PDB_for_sequence(seq)\n",
-    "            \n",
+    "\n",
+    "1. Set up and submit runs for minimize_with_cst.default.linuxgccrelease and RosettaScripts with all Zemu Structures using lbfgs_armijo_nonmonotone (default) and dfpmin_armijo_nonmonotone\n",
+    "2. Work on RMSD calculator for relevant variables\n",
+    "3. Download structures for Zemu dataset mutants if time permits\n",
     "    `\n",
     "    \n",
     "[PyPDB]: https://github.com/williamgilpin/pypdb\n"
