--- a/RotationNotebook.v1.ipynb
+++ b/RotationNotebook.v1.ipynb
@@ -27,7 +27,8 @@
     "* Try less trials, more structures\n",
     "* Get backbone RMSD's and compare to WT structures\n",
     "* Make BackrunProtocol Mover for RosettaScripts\n",
-    "* Minimize w/ constraints Mover vs. Application and get RMSD's"
+    "* Minimize w/ constraints Mover vs. Application and get RMSD's\n",
+    "* Add mute flag for MetropolisHastingsMover"
    ]
   },
   {
@@ -36,7 +37,7 @@
    "source": [
     "## April 7, 2016\n",
     "\n",
-    "Talked with Kyle about the direction of my rotation so far and decided that we should wait for a response from Colin before continuing with the DDG RosettaScript Protocol. The rationale was that my time could be better spent on something else instead of trying to implement the BackrubProtocol Mover in RosettaScripts on my own if Colin is going to help anyways.<br>\n",
+    "Talked with Kyle about the direction of my rotation so far and decided we should wait Colin's response before continuing with the DDG RosettaScript Protocol. The rationale is that my time will better spent working on something else instead of trying to implement the BackrubProtocol Mover in RosettaScripts on my own since Colin is going to help anyways.<br>\n",
     "\n",
     "<b>Other avenues to go down in the meantime:</b><br>\n",
     "\n",
@@ -79,7 +80,6 @@
     "1. Set up and submit runs for minimize_with_cst.default.linuxgccrelease and RosettaScripts with all Zemu Structures using lbfgs_armijo_nonmonotone (default) and dfpmin_armijo_nonmonotone\n",
     "2. Work on RMSD calculator for relevant variables\n",
     "3. Download structures for Zemu dataset mutants if time permits\n",
-    "    `\n",
     "    \n",
     "[PyPDB]: https://github.com/williamgilpin/pypdb\n"
    ]
