--- a/StructuralAnalysisMethods.ipynb
+++ b/StructuralAnalysisMethods.ipynb
@@ -21,7 +21,10 @@
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "import os\n",
+    "import "
+   ]
   }
  ],
  "metadata": {
