--- a/RotationNotebook.v1.ipynb
+++ b/RotationNotebook.v1.ipynb
@@ -51,6 +51,7 @@
     "    * Input starting PDB, WT output PDBs, and mutant output PDBs\n",
     "    * All-vs-all RMSDs for any outputs (DDG WT, DDG mutants, minimization comparison structures)\n",
     "    * RMSD for 8A repack sphere (repacking) and overall structure\n",
+    "    * Mutant Residue RMSD\n",
     "<br><br>\n",
     "* Find the PDB structures of Zemu dataset mutants\n",
     "    * [PyPDB] \n",
