--- a/RotationNotebook.v1.ipynb
+++ b/RotationNotebook.v1.ipynb
@@ -6,8 +6,8 @@
    "source": [
     "# Rotation Notebook: Volume 1\n",
     "## Contents:\n",
-    "* [April 4, 2016](#April-4,-2016) (full version coming soon, stuck on my Macbook..)\n",
-    "* [April 7, 2016](#April-7,-2016)"
+    "* [April 4, 2016](#April-4,-2016) - Met with Tanja, suggestions on improvements and things to try with DDG RosettaScript Protocol<br>\n",
+    "* [April 7, 2016](#April-7,-2016) - New directions while we are waiting for a repsonse from Colin"
    ]
   },
   {
@@ -28,7 +28,15 @@
     "* Get backbone RMSD's and compare to WT structures\n",
     "* Make BackrunProtocol Mover for RosettaScripts\n",
     "* Minimize w/ constraints Mover vs. Application and get RMSD's\n",
-    "* Add mute flag for MetropolisHastingsMover"
+    "* Add mute flag for MetropolisHastingsMover\n",
+    "\n",
+    "<b>Minimize_with_cst</b>\n",
+    "* Harmonic All Ca - All Ca constraints\n",
+    "* Increases fa_rep in steps [(0.1, 0.33, 1) * fa_rep] and minimizes at each step\n",
+    "\n",
+    "<b>RosettaScript Things to Test in the Future:</b>\n",
+    "* AddConstraintsToCurrentConformationMover\n",
+    "    * min_seq_sep - try different minimum sequence separation between pairs of constrained residues"
    ]
   },
   {
@@ -111,7 +119,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.11"
+   "version": "2.7.10"
   }
  },
  "nbformat": 4,
