Fixed uneditted HETATMs in PDB_REDO_Stripped

--- a/DDG_Code.ipynb
+++ b/DDG_Code.ipynb
@@ -411,17 +411,22 @@
     "#List_PDBs.py\n",
     "import os\n",
     "\n",
-    "workingdir = '/netapp/home/james.lucas/160315-kyleb_james-backrub-rscript/data/'\n",
+    "workingdir = '/Users/jameslucas/Kortemme_Rotation/PDB_REDO'\n",
+    "#workingdir = '/netapp/home/james.lucas/160315-kyleb_james-backrub-rscript/data/'\n",
     "#workingdir = '/Users/jameslucas/Kortemme_Rotation/output/'\n",
     "for i in os.listdir(workingdir):\n",
-    "    if os.path.isdir(workingdir+i):\n",
-    "        for j in os.listdir(workingdir+i):\n",
-    "            if j.endswith('.pdb'):\n",
-    "                print j\n",
-    "            else:\n",
-    "                continue\n",
+    "    if i.endswith('.pdb'):\n",
+    "        print i\n",
     "    else:\n",
-    "        continue"
+    "        continue\n",
+    "#    if os.path.isdir(workingdir+i):\n",
+    "#        for j in os.listdir(workingdir+i):\n",
+    "#            if j.endswith('.pdb'):\n",
+    "#                print j\n",
+    "#            else:\n",
+    "#                continue\n",
+    "#    else:\n",
+    "#        continue"
    ]
   },
   {
@@ -614,16 +619,20 @@
     "        pdb_stripped = open(os.getcwd() + '/PDB_REDO_Stripped/' + i[1]['PDB'].upper() + '_' + i[1]['Chains'] + '.pdb', 'w')\n",
     "        for line in pdb_original:\n",
     "            parsed = line.split()\n",
-    "            if parsed[0].strip() != 'ATOM':\n",
-    "                pdb_stripped.write(line)\n",
-    "            else:\n",
-    "                print i[1]['Chains']\n",
+    "            if parsed[0].strip() == 'ATOM':\n",
     "                if parsed[4] in i[1]['Chains']:\n",
     "                    pdb_stripped.write(line)\n",
     "                else:\n",
     "                    continue\n",
+    "            elif parsed[0].strip() == 'HETATM':\n",
+    "                if parsed[4] in i[1]['Chains']:\n",
+    "                    pdb_stripped.write(line)\n",
+    "                else:\n",
+    "                    continue\n",
+    "            else:\n",
+    "                pdb_stripped.write(line)\n",
     "                \n",
-    "df = pd.read_csv('PDB_List_REDO.csv')\n",
+    "df = pd.read_csv('/PDB_REDO/PDB_List_REDO.csv')\n",
     "\n",
     "try:\n",
     "    os.mkdir('PDB_REDO_Stripped')\n",
@@ -898,7 +907,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.11"
+   "version": "2.7.10"
   }
  },
  "nbformat": 4,
