--- a/RotationNotebook.v1.ipynb
+++ b/RotationNotebook.v1.ipynb
@@ -7,7 +7,8 @@
     "# Rotation Notebook: Volume 1\n",
     "## Contents:\n",
     "* [April 4, 2016](#April-4,-2016) - Met with Tanja, suggestions on improvements and things to try with DDG RosettaScript Protocol<br>\n",
-    "* [April 7, 2016](#April-7,-2016) - New directions while we are waiting for a repsonse from Colin"
+    "* [April 7, 2016](#April-7,-2016) - New directions while we are waiting for a repsonse from Colin\n",
+    "* [April 10, 2016](#April-10,-2016) - Updates to DDG Backrub RosettaScript"
    ]
   },
   {
@@ -91,6 +92,33 @@
     "3. Download structures for Zemu dataset mutants if time permits\n",
     "    \n",
     "[PyPDB]: https://github.com/williamgilpin/pypdb\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true
+   },
+   "source": [
+    "## April 10, 2016\n",
+    "\n",
+    "Backrub protocol basics:<br>\n",
+    "* Start backrub MC\n",
+    "    * If only sidechain rotamers is to be applied == True (P.rotatmer = 0.25):\n",
+    "        * Pick a single residue and apply rotamers\n",
+    "        * <b>Evaluate MC criterion and end Backrub MC step</b>\n",
+    "    * If only sidechain rotamers is to be applied == False (P.rotatmer = 0.25):\n",
+    "        * Apply backbone Backrub moves\n",
+    "        * If only Backrub moves==True (P.backbone = 0.75):\n",
+    "            * <b>Evaluate MC criterion and end Backrub MC step</b>\n",
+    "        * If only Backrub moves==False (P.backbone = 0.75):\n",
+    "            * Pick 1-2 residue sidechains and apply rotamers\n",
+    "            * <b>Evaluate MC criterion and end Backrub MC step</b>\n",
+    "<br><br>\n",
+    "* Added MetropolisHastingsMover in place of GenericMonteCarloMover the protocol with Backrub and Sidechain movers referenced. Sidechain mover has prob_uniform = 1 so that random rotamers will be applied.\n",
+    "* Using AddConstraintsToCurrentConformationMover with MinMover to simulate Minimize_with_cst app\n",
+    "<br><br>\n",
+    "* Unlike the BackrubProtocol, where P.rotamer = 0.25 and P.backbone = 0.75, the Rosettascript will always apply backrub and sidechain moves."
    ]
   },
   {
