--- a/StructuralAnalysisMethods.ipynb
+++ b/StructuralAnalysisMethods.ipynb
@@ -15,6 +15,78 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<Atom CA>\n"
+     ]
+    }
+   ],
+   "source": [
+    "from Bio.PDB import *\n",
+    "import os\n",
+    "\n",
+    "#From Kyle's Finalize.py\n",
+    "def read_mutations_resfile(filenum_dir):\n",
+    "    resfile = os.path.join(filenum_dir, 'mutations_repack.resfile')\n",
+    "    mutations = []\n",
+    "    with open(resfile, 'r') as f:\n",
+    "        post_start = False\n",
+    "        for line in f:\n",
+    "            if post_start:\n",
+    "                line = line.strip()\n",
+    "                pdb_resnum, chain, pikaa, mut_res = line.split()\n",
+    "                mutations.append( [pdb_resnum, chain, pikaa, mut_res] )\n",
+    "            elif line.startswith('start'):\n",
+    "                post_start = True\n",
+    "    return mutations\n",
+    "\n",
+    "#Calculates sidechain rmsd        \n",
+    "def rms_mutation(mutations, sidechain_ref, sidechain_target):\n",
+    "    \n",
+    "    #Superimpose\n",
+    "    super_imposer = Bio.PDB.Superimposer()\n",
+    "    \n",
+    "    ref_atoms = sidechain_ref.get_unpacked_list()\n",
+    "    target_atoms = sidechain_target.get_unpacked_list()\n",
+    "    \n",
+    "    super_imposer.set_atoms(ref_atoms, target_atoms)\n",
+    "    return super_imposer.rms\n",
+    "\n",
+    "#Calculates global CA rmsd   \n",
+    "def rms_global(ref_coords, alt_coords):\n",
+    "    super_imposer = Bio.PDB.Superimposer()\n",
+    "    ref_atoms = [Atom.Atom('CA','','','','','','CA', element='C') for i, coords in enumerate(ref_coords)]\n",
+    "    target_atoms = [Atom.Atom('CA','','','','','','CA', element='C') for i, coords in enumerate(alt_coords)]\n",
+    "    \n",
+    "    for i in ref_atoms:\n",
+    "        print i\n",
+    "    #super_imposer.set_atoms(ref_atoms, target_atoms)\n",
+    "    return super_imposer.rms\n",
+    "\n",
+    "#Input structure\n",
+    "parser = PDBParser()\n",
+    "structure_ref = parser.get_structure('Ref', 'TestJobs/data/59648/1TM1_EI.pdb')\n",
+    "structure_target = parser.get_structure('Target', 'PDB_REDO_Stripped/1TM1_EI.pdb')\n",
+    "    \n",
+    "#Set selection in Bio.PDB speak for ref and target PDBs\n",
+    "for i in mutations:\n",
+    "    sidechain_ref = structure_ref[0][str(i[1])][int(i[0])]\n",
+    "    sidechain_target = structure_target[0][str(i[1])][int(i[0])]\n",
+    "\n",
+    "mutations = read_mutations_resfile('TestJobs/data/59648/')\n",
+    "rms_mutation(mutations, sidechain_ref, sidechain_target)\n",
+    "rms_global(structure_ref, structure_target)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {
     "collapsed": true
@@ -142,7 +214,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.11"
+   "version": "2.7.10"
   }
  },
  "nbformat": 4,
