Completed most of the global and neighborhood RMSD calculators, still need to figure out why neighborhood RMSD is not aligning before calculating RMSD

--- a/StructuralAnalysisMethods.ipynb
+++ b/StructuralAnalysisMethods.ipynb
@@ -16,21 +16,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 55,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "scrolled": false
    },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<Atom CA>\n"
+      "set([((' ', 155, ' '), 'E'), ((' ', 218, ' '), 'E'), ((' ', 59, ' '), 'I'), ((' ', 189, ' '), 'E'), ((' ', 187, ' '), 'E'), ((' ', 62, ' '), 'I'), ((' ', 60, ' '), 'I'), ((' ', 221, ' '), 'E'), ((' ', 63, ' '), 'I'), ((' ', 220, ' '), 'E'), ((' ', 61, ' '), 'I')])\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "3.1545346456722605"
+      ]
+     },
+     "execution_count": 55,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "from Bio.PDB import *\n",
+    "import Bio.PDB\n",
     "import os\n",
     "\n",
     "#From Kyle's Finalize.py\n",
@@ -48,6 +59,105 @@
     "                post_start = True\n",
     "    return mutations\n",
     "\n",
+    "#From Kyle's Finalize.py\n",
+    "def find_neighbors(filenum_dir, pdb_path, neighbor_distance = 8.0):\n",
+    "    mutations = read_mutations_resfile(filenum_dir)\n",
+    "    open_filename = pdb_path\n",
+    "    parser = PDBParser(PERMISSIVE=1)\n",
+    "    open_strct = parser.get_structure('Open', open_filename)\n",
+    "\n",
+    "    # There should only be one model in PDB file\n",
+    "    num_models = 0\n",
+    "    for model in open_strct.get_models():\n",
+    "        num_models += 1\n",
+    "    assert( num_models == 1 )\n",
+    "\n",
+    "    chain_list = [chain.get_id() for chain in open_strct[0].get_chains()]\n",
+    "    neighbors = set()\n",
+    "    for mutation in mutations:\n",
+    "        res_id, chain_id, pikaa, mut_aa = mutation\n",
+    "        mut_chain = str(chain_id)\n",
+    "        try:\n",
+    "            mut_pos = int( res_id )\n",
+    "            mut_insertion_code = ' '\n",
+    "        except ValueError:\n",
+    "            mut_pos = int( res_id[:-1] )\n",
+    "            mut_insertion_code = res_id[-1]\n",
+    "\n",
+    "        mut_residue = open_strct[0][mut_chain][(' ', mut_pos, mut_insertion_code)]\n",
+    "        for chain in chain_list:\n",
+    "            for residue in [res.get_id() for res in open_strct[0][chain].get_residues()]:\n",
+    "                try:\n",
+    "                    # Kyle note - might be good to do something else for consistency, since not all residues have CB\n",
+    "                    dist = mut_residue['CB'] - open_strct[0][chain][residue]['CB']\n",
+    "                    if dist < neighbor_distance:\n",
+    "                        neighbors.add( (residue, chain) )\n",
+    "                except KeyError:\n",
+    "                    pass\n",
+    "\n",
+    "    return neighbors\n",
+    "\n",
+    "#Calculates global CA rmsd (Only guarenteed to work on identical structures!!!!)\n",
+    "#By identical I mean the same starting PDBs but one had some movers applied to it\n",
+    "def rms_global(ref_struc, alt_struc):\n",
+    "\n",
+    "    ref_atoms = []\n",
+    "    alt_atoms = []\n",
+    "    \n",
+    "    for ref_atom in ref_struc.get_atoms():\n",
+    "        if ref_atom.get_name() == 'CA':\n",
+    "            ref_atoms.append(ref_atom)\n",
+    "        else:\n",
+    "            continue\n",
+    "    \n",
+    "    for alt_atom in alt_struc.get_atoms():\n",
+    "        if alt_atom.get_name() == 'CA':\n",
+    "            alt_atoms.append(alt_atom)\n",
+    "        else:\n",
+    "            continue\n",
+    "    \n",
+    "    super_imposer = Bio.PDB.Superimposer()\n",
+    "    super_imposer.set_atoms(ref_atoms, alt_atoms)\n",
+    "    \n",
+    "    return super_imposer.rms\n",
+    "\n",
+    "#ALLxALL Global RMSD\n",
+    "def all_by_all(datadir):\n",
+    "    parser = PDBParser()\n",
+    "    all_rmsd = []\n",
+    "    for i in enumerate(os.listdir(datadir)):\n",
+    "        if i[1].endswith('.pdb'):\n",
+    "            for j in enumerate(os.listdir(datadir)):\n",
+    "                if j[1].endswith('.pdb'):\n",
+    "                    if i[0]>j[0]:\n",
+    "                        structure_ref = parser.get_structure('Ref', 'TestJobs/output/59648/%s' % i[1])\n",
+    "                        structure_target = parser.get_structure('Target', 'TestJobs/output/59648/%s' % j[1])\n",
+    "\n",
+    "                        RMSD = rms_global(structure_ref, structure_target)\n",
+    "                        print '%s:%s = %s' %( j[1][9:-4], i[1][9:-4], RMSD)\n",
+    "                        all_rmsd.append(RMSD)\n",
+    "    return all_rmsd\n",
+    "\n",
+    "#Neighborhood RMSD\n",
+    "def rms_neighborhood(neighbors, ref_struc, alt_struc):\n",
+    "    ref_atoms = []\n",
+    "    alt_atoms = []\n",
+    "\n",
+    "    for res in neighbors:\n",
+    "        for ref_atom in ref_struc.get_atoms():\n",
+    "            if ref_atom.get_parent().get_full_id()[2] == res[1]:\n",
+    "                if ref_atom.get_parent().get_full_id()[3][1] == res[0][1]:\n",
+    "                    ref_atoms.append(ref_atom)                \n",
+    "        for alt_atom in alt_struc.get_atoms():\n",
+    "            if alt_atom.get_parent().get_full_id()[2] == res[1]:\n",
+    "                if alt_atom.get_parent().get_full_id()[3][1] == res[0][1]:     \n",
+    "                    alt_atoms.append(alt_atom)\n",
+    "    \n",
+    "    super_imposer = Bio.PDB.Superimposer()\n",
+    "    super_imposer.set_atoms(ref_atoms, alt_atoms)\n",
+    "\n",
+    "    return super_imposer.rms\n",
+    "\n",
     "#Calculates sidechain rmsd        \n",
     "def rms_mutation(mutations, sidechain_ref, sidechain_target):\n",
     "    \n",
@@ -60,30 +170,26 @@
     "    super_imposer.set_atoms(ref_atoms, target_atoms)\n",
     "    return super_imposer.rms\n",
     "\n",
-    "#Calculates global CA rmsd   \n",
-    "def rms_global(ref_coords, alt_coords):\n",
-    "    super_imposer = Bio.PDB.Superimposer()\n",
-    "    ref_atoms = [Atom.Atom('CA','','','','','','CA', element='C') for i, coords in enumerate(ref_coords)]\n",
-    "    target_atoms = [Atom.Atom('CA','','','','','','CA', element='C') for i, coords in enumerate(alt_coords)]\n",
-    "    \n",
-    "    for i in ref_atoms:\n",
-    "        print i\n",
-    "    #super_imposer.set_atoms(ref_atoms, target_atoms)\n",
-    "    return super_imposer.rms\n",
+    "#Input structure (for now, should transfer to a different function later)\n",
+    "def simple_input():\n",
+    "    parser = PDBParser()\n",
+    "    structure_ref = parser.get_structure('Ref', 'TestJobs/data/59648/1TM1_EI.pdb')\n",
+    "    structure_target = parser.get_structure('Target', 'PDB_REDO_Stripped/1TM1_EI.pdb')\n",
+    "    return structure_ref, structure_target\n",
     "\n",
-    "#Input structure\n",
-    "parser = PDBParser()\n",
-    "structure_ref = parser.get_structure('Ref', 'TestJobs/data/59648/1TM1_EI.pdb')\n",
-    "structure_target = parser.get_structure('Target', 'PDB_REDO_Stripped/1TM1_EI.pdb')\n",
-    "    \n",
-    "#Set selection in Bio.PDB speak for ref and target PDBs\n",
-    "for i in mutations:\n",
-    "    sidechain_ref = structure_ref[0][str(i[1])][int(i[0])]\n",
-    "    sidechain_target = structure_target[0][str(i[1])][int(i[0])]\n",
+    "#Define things\n",
+    "datadir = 'TestJobs/output/59648'\n",
+    "filenum_dir = 'TestJobs/data/59648/'\n",
+    "pdb_path = 'TestJobs/data/59648/1TM1_EI.pdb'\n",
+    "neighbors = find_neighbors(filenum_dir, pdb_path, 8)\n",
     "\n",
-    "mutations = read_mutations_resfile('TestJobs/data/59648/')\n",
-    "rms_mutation(mutations, sidechain_ref, sidechain_target)\n",
-    "rms_global(structure_ref, structure_target)"
+    "\n",
+    "#Action!\n",
+    "#all_by_all(datadir)\n",
+    "#mutations = read_mutations_resfile('TestJobs/data/59648/')\n",
+    "#structure_ref, structure_target = simple_input()\n",
+    "#rms_global(structure_ref, structure_target)\n",
+    "rms_neighborhood(neighbors, structure_ref, structure_target)"
    ]
   },
   {
