Fixed Neighborhood RMSD

--- a/StructuralAnalysisMethods.ipynb
+++ b/StructuralAnalysisMethods.ipynb
@@ -16,30 +16,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": null,
    "metadata": {
     "collapsed": false,
     "scrolled": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "set([((' ', 155, ' '), 'E'), ((' ', 218, ' '), 'E'), ((' ', 59, ' '), 'I'), ((' ', 189, ' '), 'E'), ((' ', 187, ' '), 'E'), ((' ', 62, ' '), 'I'), ((' ', 60, ' '), 'I'), ((' ', 221, ' '), 'E'), ((' ', 63, ' '), 'I'), ((' ', 220, ' '), 'E'), ((' ', 61, ' '), 'I')])\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "3.1545346456722605"
-      ]
-     },
-     "execution_count": 55,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "import Bio.PDB\n",
     "import os\n",
@@ -144,14 +126,21 @@
     "    alt_atoms = []\n",
     "\n",
     "    for res in neighbors:\n",
-    "        for ref_atom in ref_struc.get_atoms():\n",
+    "        for (ref_atom, alt_atom) in zip(ref_struc.get_atoms(), alt_struc.get_atoms()):\n",
     "            if ref_atom.get_parent().get_full_id()[2] == res[1]:\n",
     "                if ref_atom.get_parent().get_full_id()[3][1] == res[0][1]:\n",
     "                    ref_atoms.append(ref_atom)                \n",
-    "        for alt_atom in alt_struc.get_atoms():\n",
     "            if alt_atom.get_parent().get_full_id()[2] == res[1]:\n",
     "                if alt_atom.get_parent().get_full_id()[3][1] == res[0][1]:     \n",
     "                    alt_atoms.append(alt_atom)\n",
+    "    def getKey(item):\n",
+    "        return item.get_full_id()[4][0]\n",
+    "    \n",
+    "    ref_atoms = sorted(ref_atoms, key=getKey)\n",
+    "    alt_atoms = sorted(alt_atoms, key=getKey)\n",
+    "    \n",
+    "    for (i,j) in zip(enumerate(ref_atoms),enumerate(alt_atoms)):\n",
+    "        print '%s : %s' %(i[1].get_full_id() ,j[1].get_full_id())\n",
     "    \n",
     "    super_imposer = Bio.PDB.Superimposer()\n",
     "    super_imposer.set_atoms(ref_atoms, alt_atoms)\n",
@@ -174,7 +163,7 @@
     "def simple_input():\n",
     "    parser = PDBParser()\n",
     "    structure_ref = parser.get_structure('Ref', 'TestJobs/data/59648/1TM1_EI.pdb')\n",
-    "    structure_target = parser.get_structure('Target', 'PDB_REDO_Stripped/1TM1_EI.pdb')\n",
+    "    structure_target = parser.get_structure('Target', 'TestJobs/output/59648/1TM1_EI_0001.pdb')\n",
     "    return structure_ref, structure_target\n",
     "\n",
     "#Define things\n",
@@ -185,6 +174,7 @@
     "\n",
     "\n",
     "#Action!\n",
+    "simple_input()\n",
     "#all_by_all(datadir)\n",
     "#mutations = read_mutations_resfile('TestJobs/data/59648/')\n",
     "#structure_ref, structure_target = simple_input()\n",
